Update ka_inst_man_tomcat.rst